# FrcControls

./: Cargo.toml  README.md  \
.cargo/: config
2023_charged_up/: build.gradle  simgui.json
2023_charged_up/.wpilib/: wpilib_preferences.json
2023_charged_up/src/main/java/frc/robot/: CANSparkMax.java  Constants.java  Gains.java  OI.java  Robot.java  RobotContainer.java
2023_charged_up/src/main/java/frc/robot/commands/: autoGroup.java  drive.java  pickup.java  rotate.java  rotateback.java  setIntakeHalf.java  setIntakeIn.java  setIntakeOut.java  taxi.java  taxiback.java
2023_charged_up/src/main/java/frc/robot/subsystems/: DrivetrainSubsystem.java  Elevator.java  FourBar.java  Intake.java  PID.java  Penetrator.java  Shooter.java  Telemetry.java  Vision.java  combus.java
src/: .lib.rs.rustfmt  field.rs  lib.rs  main.rs  spline.rs
