[package]
name = "apriltag-jni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apriltag = { path = "../apriltag-rust/", features = ["image"] }
anyhow = "1.0.68"
structopt = "0.3.26"
image = "0.24"
mat2image = "0.2.0"
opencv = { version = "0.74.0", features = ["rgb"] }
