[package]
name = "apriltag-jni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apriltag = { path = "../apriltag-rust/", features = ["image"] }
anyhow = "1.0.68"
image = "0.24"
mat2image = { version = "0.2.0", features = ["rayon"] }
opencv = { version = "0.74.0", features = ["rgb"] }
