[package]
name = "frc-controls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apriltag = { path = "../apriltag-rust/", features = ["image"] }
anyhow = "=1.0.42"
image = "=0.24"
mat2image = { version = "=0.2.0", features = ["rayon"] }
opencv = { version = "=0.74.0", default-features = false, features = ["rgb", "video", "highgui", "imgproc", "videoio"] }
lazy_static = "1.4.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
nt = { git = "https://github.com/first-rust-competition/nt-rs", rev = "28f100e675c7b6a4a09557c844b37855fb3c5051" }
